# plexify

./: .env.example  .gitignore  AGENTS.md  FUTURE.md  README.md  drizzle.config.ts  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
messages/: en.json
src/: App.tsx  app.css  app.d.ts  hooks.server.ts  hooks.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  genius.rs  main.rs  mediasession.rs  podcast.rs  radiobrowser.rs
src-tauri/src/audio/: analyzer.rs  bpm.rs  cache.rs  commands.rs  decoder.rs  engine.rs  eq.rs  mod.rs  normalization.rs  output.rs  state.rs  types.rs
src-tauri/src/audio_engine/: callback.rs  mod.rs
src-tauri/src/audio_engine/deck/: decode.rs  streaming.rs
src-tauri/src/db/: albums.rs  artists.rs  kv.rs  mod.rs  playlists.rs  schema.rs  tracks.rs
src-tauri/src/db/migrations/: V1__initial.sql
src-tauri/src/plex/: audio.rs  client.rs  history.rs  library.rs  mod.rs  models.rs  playlist.rs  playqueue.rs
src/audio/: RustAudioEngine.ts
src/audio/engine/: deckManager.ts
src/backends/: init.ts  registry.ts  types.ts
src/backends/apple/: api.ts  definition.tsx  settings.tsx  store.ts
src/backends/deezer/: api.ts  definition.tsx  settings.tsx  store.ts
src/backends/demo/: api.ts  connectionStore.ts  definition.tsx  imageUrl.ts  mappers.ts  provider.ts  settings.tsx  state.ts  types.ts
src/backends/lastfm/: api.ts  authStore.ts  definition.tsx  settings.tsx  store.ts
src/backends/plex/: api.ts  connectionStore.ts  definition.tsx  imageUrl.ts  mappers.ts  provider.ts  settings.tsx  types.ts
src/backends/podcast/: api.ts  mappers.ts  store.ts
src/components/: ContextMenu.tsx  DebugPanel.tsx  EpisodeRow.tsx  EqPanel.tsx  HeroRating.tsx  LyricsPanel.tsx  MediaCard.tsx  Page.tsx  Player.tsx  PlayerPopover.tsx  QueuePanel.tsx  ScrollRow.tsx  SearchDropdown.tsx  SideBar.tsx  SleepTimerPanel.tsx  TopBar.tsx  TrackInfoPanel.tsx  UpdateDialog.tsx  VisualizerCanvas.tsx  VisualizerFullscreen.tsx  WindowTitleBar.tsx
src/components/Pages/: Album.tsx  Artist.tsx  CreatePlaylist.tsx  Home.tsx  HubPage.tsx  InternetRadio.tsx  Library.tsx  Liked.tsx  (+12 more)
src/hooks/: useCapability.ts  useContextMenu.ts  useMediaImage.ts  useMetadataEnrichment.ts
src/lib/: async.ts  audio.ts  color.ts  configTypes.ts  focalPoint.ts  fonts.ts  formatters.ts  imageCache.ts  imageUrl.ts  mediaPlay.ts  platform.ts  plex.ts  radioAudio.ts  radiobrowser.ts  recentPlaylists.ts  settings.ts  theme.ts
src/metadata/: index.ts  types.ts
src/paraglide.inlang/: project_id  settings.json
src/providers/: types.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/stores/: audioSettingsStore.ts  connectionStore.ts  contextMenuStore.ts  debugPanelStore.ts  eqStore.ts  highlightStore.ts  index.ts  libraryStore.ts  lyricsOffsetStore.ts  lyricsStore.ts  metadataCache.ts  playerStore.ts  providerStore.ts  radioStreamStore.ts  searchStore.ts  sleepTimerStore.ts  uiStore.ts  updateStore.ts
src/types/: music.ts  plex.ts
(+177 files in other folders)
