[package]
name = "plexify"
version = "0.1.0"
description = "Plexify — Plex music client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client with retry logic
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.5"

# Utilities
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }

# Audio engine
symphonia = { version = "0.5", features = [
    "mp3", "aac", "flac", "ogg", "wav", "pcm", "isomp4",
] }
cpal = "0.15"
ringbuf = "0.4"
crossbeam-channel = "0.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
